# LVGL_yikang

./: CMakeLists.txt  README.md  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h
depend/lib/win64/: mosquitto.lib  mosquittopp.lib  pugixml.lib  uv.lib
lvgl/: README_zh.md
lvgl/eques_lvgl/: com.c  com.h  lv_homepage.c  lv_homepage.h
lvgl/eques_lvgl/assets/: bimai.c  eques_bold_24.c  eques_bold_28.c  eques_bold_36.c  eques_regular_24.c  eques_regular_28.c  eques_regular_32.c  eques_regular_36.c  eques_regular_48.c  eques_regular_60.c  fontawesome_icon_150.c  fontawesome_icon_26.c  fontawesome_icon_32.c  fontawesome_icon_40.c  fontawesome_icon_60.c  iconfont_icon.c  iconfont_icon_20.c  iconfont_icon_32.c  iconfont_icon_50.c  iconfont_icon_60.c  iconfont_icon_90.c  jiepin.c  kaimai.c  kaisuo.c  kaisuo_off.c  lupin.c  lupin_off.c  menu_icon.c  my_custom_icon.c  my_custom_icon_26.c  my_custom_icon_50.c  my_custom_icon_60.c  text111.c  video_momo_.c  wifi.c  yinliang.c  yinliang_off.c
lvgl/eques_lvgl/dev_info/: lv_dev_info.c  lv_dev_info.h
lvgl/eques_lvgl/file_cache/: lv_file_cache.c  lv_file_cache.h
lvgl/eques_lvgl/monitor_video/: lv_monitor_video.c  lv_monitor_video.h
lvgl/eques_lvgl/msg_center/: lv_msg_center.c  lv_msg_center.h  msg_center_com.c  msg_center_com.h
lvgl/eques_lvgl/sys_settings/: lv_sys_settings.c  lv_sys_settings.h
lvgl/eques_lvgl/sys_settings/sys_child/: biometrics.c  biometrics.h  monitor_Mode.c  monitor_Mode.h  notification.c  notification.h  screen_time.c  screen_time.h
lvgl/eques_lvgl/user_manage/: lv_user_manage.c  lv_user_manage.h
lvgl/eques_lvgl/user_manage/user_manage_opt/: lv_family_menber.c  lv_family_menber.h  lv_other_member.c  lv_other_member.h  lv_user_permission.c  lv_user_permission.h
lvgl/eques_lvgl/user_manage/user_manage_opt/family_menber_opt/: lv_a_enroll_opt.c  lv_a_enroll_opt.h  lv_card_add.c  lv_card_add.h  lv_edit_record.c  lv_edit_record.h  lv_face_add.c  lv_face_add.h  lv_finger_add.c  lv_finger_add.h  lv_pwd_add.c  lv_pwd_add.h
lvgl/examples/widgets/label/: lv_example_label_3.c
lvgl/src/extra/widgets/calendar/: lv_calendar_header_dropdown.c
main/src/: main.c
scripts/: auto_build_run.sh  cmake_make.sh  cmake_msbuild.bat
